--- a/index.html
+++ b/index.html
@@ -4,34 +4,72 @@ title: Riverside.io | We are a nonprofit coworking and hackerspace located in th
 ---
 
 <div class="hero">
-    <h4>{{ site.data.landing.subheader}}</h4>
-    {% for section in site.data.landing.about %}
-      <div class="three-w">
-          <i class="{{section.icon}}"></i>
-          <p>{{section.contents}} 
-            {% if section.href %}
-              <a href='{{section.href}}'>{{section.link-text}}</a>
-            {% endif %}</p>
+    <div class="site">
+      <h2>{{ site.data.landing.subheader}}</h2>
+
+      <div class="g-r">
+        {% for section in site.data.landing.about %}
+          <div class="u-1-3">
+              <div class="hero-module">
+                <i class="{{section.icon}}"></i>
+                <p>{{section.contents}} 
+                  {% if section.href %}
+                    <a href='{{section.href}}'>{{section.link-text}}</a>
+                  {% endif %}</p>
+              </div>
+          </div>
+        {% endfor %}
       </div>
-    {% endfor %}
-    <h4>From some of our members</h4>
-  	{% for testamonial in site.data.testamonials %}
-      <div class="testamonial" >
-    		<h2>{{ testamonial.name }}</h2>
-    		<p>{{ testamonial.contents }}</p>
+      <h2>From some of our members</h2>
+      <div class="testamonials">
+      	{% for testamonial in site.data.testamonials %}
+          <div class="testamonial" >
+            <i class="testamonial-avatar" style='background-image:url("{{testamonial.avatar}}");'/>
+            <div class="testamonial-content"></i>
+              <div class="bubble">
+                <p>{{ testamonial.contents }}</p>
+                <strong>~ {{ testamonial.name }}</strong>
+              </div>
+            </div>
+          </div>
+      	{% endfor %}
       </div>
-  	{% endfor %}
+    </div>
 </div>
+<div class="clearfix"></div>
 <div class="expect">
-  <h4>What to Expect</h4>
-  <p>{{site.data.landing.expect.contents}}</p>
-  <ul>
-    {% for item in site.data.landing.expect.list %}
-      <li>{{item}}</li>
-    {% endfor %}
-  </ul>
+  <h1>What to Expect</h1>
+  <div class="g-r">
+    <div class="u-2-3">
+      <p>{{site.data.landing.expect.contents}}</p>
+    </div>
+    <div class="u-1-3">
+      <ul>
+        {% for item in site.data.landing.expect.list %}
+          <li>{{item}}</li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
 </div>
-<div class="expect">
-  <h4>Become a Member</h4>
-  <p>{{site.data.landing.join}}</p>
+<div class="become">
+  <div class="site">
+    <div class="become-container">
+      <h1>Join Us</h1>
+      <div class="g-r">
+        <div class="u-1-2">
+          <form method="POST" action="" class="form form-stacked">
+            <label for="email">Email</label>
+            <input type="text" id="email" name="email" class="input"/>
+            <label for="email">Password</label>
+            <input type="text" id="email" name="email" class="input"/>
+            <input type="submit" class="button alert" value="Join" />
+          </form>
+        </div>
+        <div class="u-1-2">
+        <p>{{site.data.landing.join}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
