adding in members page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Riverside.io | We are a nonprofit coworking and hackerspace located in th
       <div class="testamonials">
       	{% for testamonial in site.data.testamonials %}
           <div class="testamonial" >
-            <i class="testamonial-avatar" style='background-image:url("{{testamonial.avatar}}");'/>
+            <i class="testamonial-avatar avatar" style='background-image:url("{{testamonial.avatar}}");'/>
             <div class="testamonial-content"></i>
               <div class="bubble">
                 <p>{{ testamonial.contents }}</p>
