--- a/members.html
+++ b/members.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Riverside.io | Memembers
+title: Riverside.io | Members
 ---
 <ul class="members-list">
 	{% for member in site.data.members %}
