making avatars smaller to gain some area

--- a/members.html
+++ b/members.html
@@ -2,6 +2,7 @@
 layout: default
 title: Riverside.io | Members
 ---
+<h2 class="page-header">Members</h2>
 <ul class="members-list">
 	{% for member in site.data.members %}
 		<li class="member-list-item">
