--- a/testimonials.html
+++ b/testimonials.html
@@ -2,7 +2,7 @@
 layout: default
 title: Riverside.io | Testimonials
 ---
-<h1>Testimonials</h1>
+<h2 class="page-header">Testimonials</h2>
 <ul class="members-list">
 	{% for testimonial in site.data.testamonials %}
 		<li class="member-list-item" id="{{testimonial.name | uri_escape}}">
