pointing towards the new signup form

--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@ title: Riverside.io | We are a nonprofit coworking and hackerspace located in th
       <h1>Join Us</h1>
       <div class="g-r">
         <div class="u-1-2">
-          <form method="POST" action="" class="form form-stacked">
+          <form action="" class="form form-stacked">
             <label for="email">Email</label>
             <input type="text" id="email" name="email" class="input"/>
-            <label for="email">Password</label>
-            <input type="text" id="email" name="email" class="input"/>
-            <input type="submit" class="button alert" value="Join" />
+            <input type="submit" class="button alert join-submit" value="Sign Up" />
           </form>
         </div>
         <div class="u-1-2">
