--- a/events.html
+++ b/events.html
@@ -6,7 +6,8 @@ title: Riverside.io | Members
 	<h2>Events</h2>
 	<form class="event-search form-stacked form">
 		<label for="event-search" >Search</label>
-		<input type="text" name="search"  id="event-search"/>
+		<input type="text" name="search"  id="event-search" placeholder="js, python, wordpress"/>
+		<i>Tip: You can use date filters to find more events or events on a certain days, eg: 'date:1/1/15', 'from:2/1/15 to:2/11/15'</i>
 	</form>
 </div>
 <ul class="events members-list"></ul>
