--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@ title: Riverside.io | Events
 <div class="events-header">
 	<div class="g-r pure-hidden-phone">
     {% for src in site.data.events.photos %}
-      <div class="u-1-5">
+      <div class="u-1-5 pure-hidden-phone">
         <a href="{{src}}"><img src="{{src}}"></a>
       </div>
     {% endfor %}
