Actually needs pure- prefact removed

--- a/events.html
+++ b/events.html
@@ -3,9 +3,9 @@ layout: default
 title: Riverside.io | Events
 ---
 <div class="events-header">
-	<div class="g-r pure-hidden-phone">
+	<div class="g-r hidden-phone">
     {% for src in site.data.events.photos %}
-      <div class="u-1-5 pure-hidden-phone">
+      <div class="u-1-5 hidden-phone">
         <a href="{{src}}"><img src="{{src}}"></a>
       </div>
     {% endfor %}
