checking for about before markdownifying

--- a/members.html
+++ b/members.html
@@ -9,7 +9,9 @@ title: Riverside.io | Members
 			<i class="avatar member-list-item-avatar" style='background-image:url("{{member.avatar}}");'></i>
 			<article class="member-list-item-content">
 				<h3>{{member.name}}</h3>
-				<p>{{member.about | markdownify}}</p>
+				{% if about %}
+					<p>{{member.about | markdownify}}</p>
+				{% endif %}
 			</article>
 		</li>
 	{% endfor %}
