--- a/events.html
+++ b/events.html
@@ -14,9 +14,12 @@ title: Riverside.io | Events
   <h2>Events</h2>
 
 	<form class="event-search form-stacked form">
-		<label for="event-search" >Search</label>
+		<div class="labels">
+			<label for="event-search" >Search</label>
+			<a href="http://riversideio-access.herokuapp.com/createevent" class="right">Create Event</a>
+		</div>
 		<input type="text" name="search"  id="event-search" placeholder="js, python, wordpress"/>
-		<i>Tip: You can use date filters to find more events or events on a certain days, eg: 'date:1/1/15', 'from:2/1/15 to:2/11/15'</i>
+		<label>Tip: You can use date filters to find more events or events on a certain days, eg: 'date:1/1/15', 'from:2/1/15 to:2/11/15'</label>
 	</form>
 </div>
 <ul class="events members-list"></ul>
