--- a/testimonials.html
+++ b/testimonials.html
@@ -4,8 +4,7 @@ title: Riverside.io | Testimonials
 ---
 <h2 class="page-header">Testimonials</h2>
 <ul class="members-list">
-  {% random site.data.testimonials testimonials %}
-	{% for testimonial in testimonials %}
+	{% for testimonial in site.data.testimonials %}
 		<li class="member-list-item" id="{{testimonial.name | uri_escape}}">
 			<i class="avatar member-list-item-avatar" style='background-image:url("{{testimonial.avatar}}");'></i>
 			<article class="member-list-item-content">
