--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: default
 title: Riverside.io | We are a nonprofit coworking and hackerspace located in the heart of Downtown Riverside. Come join us!
 ---
-
+<script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
+<link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
 <div class="hero">
     <div class="site">
       <h2>{{site.data.landing.subheader}}</h2>
@@ -36,20 +37,27 @@ title: Riverside.io | We are a nonprofit coworking and hackerspace located in th
     </div>
 </div>
 <div class="clearfix"></div>
-<div class="expect">
-  <h1>What to Expect</h1>
-  <div class="g-r">
-    <div class="u-2-3">
-      <p>{{site.data.landing.expect.contents | markdownify}}</p>
-    </div>
-    <div class="u-1-3">
-      <ul>
-        {% for item in site.data.landing.expect.list %}
-          <li>{{item}}</li>
-        {% endfor %}
-      </ul>
+<div class="hero-map" >
+  <div class="map-content">
+    <h1>What to Expect</h1>
+    <div class="g-r">
+      <div class="u-2-3">
+        <p>{{site.data.landing.expect.contents | markdownify}}</p>
+      </div>
+      <div class="u-1-3"></div>
+      <div class="u-2-3">
+        <ul>
+          {% for item in site.data.landing.expect.list %}
+            <li>{{item}}</li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class="u-1-3"></div>
     </div>
   </div>
+  <div id="map"></div>
+</div>
+<div class="expect">
   <div class="g-r">
     {% for photo in site.data.landing.expect.photos %}
       <div class="u-1">
