adding flyer to homepage

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@ title: Riverside.io | We are a nonprofit coworking and hackerspace located in th
     </div>
 </div>
 <div class="clearfix"></div>
+<div class="events">
+    <img src="./img/events/grandopening.jpg" alt="Riverside.io Grand Opening"/>
+</div>
 <div class="expect">
   <h1>What to Expect</h1>
   <div class="g-r">
