--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ title: Riverside.io | We are a nonprofit coworking and hackerspace located in th
     </div>
 </div>
 <div class="clearfix"></div>
-<div class="events">
-    <img src="./img/events/grandopening.jpg" alt="Riverside.io Grand Opening"/>
+<div class="events" style="text-align:center">
+    <img src="./img/grandopening.jpg" alt="Riverside.io Grand Opening"/>
 </div>
 <div class="expect">
   <h1>What to Expect</h1>
