--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ title: Riverside.io | We are a nonprofit coworking and hackerspace located in th
     </div>
 </div>
 <div class="clearfix"></div>
-<div class="events" style="text-align:center">
+<!-- TODO: Remove inline styles -->
+<div class="events" style="text-align:center; padding-top:20px;">
     <img src="./img/grandopening.jpg" alt="Riverside.io Grand Opening"/>
 </div>
 <div class="expect">
