--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: Riverside.io | We are a nonprofit coworking and hackerspace located in th
 </div>
 <div class="clearfix"></div>
 <!-- TODO: Remove inline styles -->
-<div class="events" style="text-align:center; padding-top:20px;">
+<div class="events" style="text-align:center; padding-top:20px; max-width:100%;">
     <img src="./img/grandopening.jpg" alt="Riverside.io Grand Opening"/>
 </div>
 <div class="expect">
